TEST_PROGRAMS/VALID/Terrence_Ko/Tnest.min
var n :int ;
var nest: int;
var m: int;
var heh: float;

m = 2;
n = 1;
nest = 2;
heh = 3.3;

# I can't really into comments 
while n do 
	if (m - nest) then
		n = 0;
		print "interrupting";
	else
		print "omg infinite loot danger";
		n = 0;
	endif
	heh = heh/2;
done

print "no infinite loop ayyyy";
	
