TEST_PROGRAMS/INVALID/Terrence_Ko/whileif.min
var n:int;
var m: float;

n=0;


while if (n) then print "what"; endif do print "this shouldn't work" done
